modifications to use OpenJDK and for upgrading to JDK 11; switch from Apache to JDK 11's HTTP Client API. Build using aic- libs via maven repository rather than using the fat jar. Add check to model file watcher so that it only tries to process .json files. Don't add HTML tags to notification messages, since it conflicts with client-side UI code that escapes html in notification messages.